--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ name: n-at site
 markdown: redcarpet
 pygments: true
 
-exclude: ['.git', '.vagrant', 'Vagrantfile', 'provision.sh', 'CNAME']
+exclude: ['.git', '.vagrant', 'Vagrantfile', 'provision.sh', 'CNAME', 'README.md']
