Add a 'tables' RedCarpet extension

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
-name: n-at site
+name: Code More
 markdown: redcarpet
 pygments: true
 
 exclude: ['.git', '.vagrant', 'Vagrantfile', 'provision.sh', 'CNAME', 'README.md']
+
+redcarpet:
+    extensions: ['tables']
