Try to use kramdown Fix: vagrant provision script

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 name: Code More
-markdown: redcarpet
+markdown: kramdown
 pygments: true
 
 exclude: ['.git', '.vagrant', 'Vagrantfile', 'provision.sh', 'CNAME', 'README.md']
 
-redcarpet:
-    extensions: ['tables']
