--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Code More
 markdown: kramdown
-pygments: true
+highlighter: pygments
 
 exclude: ['.git', '.vagrant', 'Vagrantfile', 'provision.sh', 'CNAME', 'README.md']
