--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 name: Code More
 
-exclude: ['.git', '.vagrant', 'Vagrantfile', 'provision.sh', 'CNAME', 'README.md']
+exclude: ['.git', '.vagrant', 'Vagrantfile', 'provision.sh', 'README.md']
