--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 name: Code More
-
 exclude: ['.git', '.vagrant', 'Vagrantfile', 'provision.sh', 'CNAME', 'README.md']
+plugins:
+  - jekyll-sitemap
+ 
